removing usage of restricted apis